--- a/styles.css
+++ b/styles.css
@@ -338,4 +338,140 @@ body{
         grid-template-columns: repeat(1, 1fr);
     }
 }
-
+.testimonial_container{
+    background-color: var(--background-color);
+    margin: 0 auto;
+    padding: 1.2rem;
+    max-width: 1250px;
+}
+.testimonial_content{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.testimonial_title{
+    font-size: 1.875rem;
+    font-weight: bold;
+    text-align: center;
+}
+.testimonial_grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+    grid-gap: 1.5rem;
+}
+.testimonial_card{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid var(--dark-gray);
+    border-radius: 2rem;
+    box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
+    padding: 1rem;
+    gap: 1.2rem;
+    transition: all 0.3s ease;
+}
+.testimonial_card:hover{
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    border: 1px solid var(--primary-color);
+}
+.testimonial_avtar img{
+    width: 4.5rem;
+    height: 4.5rem;
+}
+.testimonial_text{
+    font-size: 0.875rem;
+    color: #555;
+}
+.testimonial_name{
+    font-size: 1rem;
+    color: var(--primary-color);
+}
+.testimonial_desc{
+    font-size: 0.875rem;
+    color: #777;
+}
+.newsletter_container{
+    max-width: 1250px;
+    padding: 2rem;
+    height: 42vh;
+    background-color: var(--background-color);
+    margin: 0 auto;
+}
+.newsletter_content{
+    display: flex;
+    flex-direction: row;
+    background-color: var(--light-gray);
+    height: 100%;
+    border-radius: 8px;
+    overflow: hidden;
+}
+.news_left{
+    width: 50%;
+    height: 100%;
+    position: relative;
+}
+.news_left img{
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.news_right {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+}
+.news_info{
+    /* padding: 3rem; */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.news_title{
+    font-size: 2.3rem;
+    font-weight: bold;
+    color: var(--primary-color);
+    padding: 0 2rem;
+}
+.news_desc{
+    color: #777;
+    padding: 0 2rem;
+}
+.news_form{
+    display: flex;
+    padding: 0.5rem 2rem;
+    flex-direction: row;
+    gap: 0.8rem;
+}
+.news_email{
+    background-color: var(--background-color);
+    width: 100%;
+    outline: none;
+    color: #333;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 0.8rem 0.75rem;
+}
+.news_email:focus{
+    box-shadow: 0 4x 8px rgba(0,0,0,0.2) ;
+    border-color: var(--accent-color);
+}
+.news_button{
+    background-color: var(--primary-color);
+    color: var(--background-color);
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.25rem;
+}
+.news_policy{
+    padding: 0rem 1.9rem;
+    color: #777;
+    font-size: 0.85rem;
+}
+.news_link{
+    text-decoration: underline;
+    color: #2563eb;
+}
