--- a/styles.css
+++ b/styles.css
@@ -342,12 +342,14 @@ body{
     background-color: var(--background-color);
     margin: 0 auto;
     padding: 1.2rem;
+    margin-top: 1.5rem;
     max-width: 1250px;
 }
 .testimonial_content{
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    max-width: 1250px;
 }
 .testimonial_title{
     font-size: 1.875rem;
@@ -356,7 +358,7 @@ body{
 }
 .testimonial_grid{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 1.5rem;
 }
 .testimonial_card{
@@ -395,7 +397,7 @@ body{
     padding: 2rem;
     height: 42vh;
     background-color: var(--background-color);
-    margin: 0 auto;
+    margin: 0.5rem auto;
 }
 .newsletter_content{
     display: flex;
@@ -409,6 +411,7 @@ body{
     width: 50%;
     height: 100%;
     position: relative;
+    display: none;
 }
 .news_left img{
     position: absolute;
@@ -417,6 +420,11 @@ body{
     height: 100%;
     object-fit: cover;
     object-position: center;
+}
+@media screen and (min-width:648px) {
+    .news_left{
+        display: block;
+    }
 }
 .news_right {
     display: flex;
@@ -435,14 +443,16 @@ body{
     font-weight: bold;
     color: var(--primary-color);
     padding: 0 2rem;
+    text-align: start;
 }
 .news_desc{
     color: #777;
     padding: 0 2rem;
+    font-size: 1rem;
 }
 .news_form{
     display: flex;
-    padding: 0.5rem 2rem;
+    padding: 0.8rem 2rem;
     flex-direction: row;
     gap: 0.8rem;
 }
@@ -467,11 +477,111 @@ body{
     border-radius: 0.25rem;
 }
 .news_policy{
-    padding: 0rem 1.9rem;
+    padding: 0.8rem 2rem;
     color: #777;
-    font-size: 0.85rem;
+    font-size: 0.8rem;
+    text-align: start;
 }
 .news_link{
     text-decoration: underline;
     color: #2563eb;
+}
+.footer_container{
+    background-color: var(--background-color);
+    margin: 0 auto;
+    padding: 1.5rem 2rem ;
+    display: flex;
+    flex-direction: column;
+    max-width: 1250px;
+}
+.footer_main{
+    max-width: 1250px;
+    padding: 2rem;
+    text-align: left;
+    display: flex;
+    justify-content: space-between;
+}
+.footer_top{
+    width: 34%;
+}
+.company_logo{
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+}
+.footer_logo{
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+.footer_svg{
+    width: 1.5rem;
+    height: 1.5rem;
+}
+.footer_title{
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: var(--text-color);
+}
+.social_icons{
+    display: flex;
+    flex-direction: row;
+    gap: 0.8rem;
+}
+.social_svg{
+    width: 1.8rem;
+    height: 3.5rem;
+}
+.footer_tagline{
+    font-size: 1rem;
+    color: #777;
+    margin-top: 0.8rem;
+}
+.footer_grid{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 4.5rem;
+}
+.footer_grid_headings{
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: var(--text-color);
+    margin-bottom: 2rem;
+}
+ul{
+    list-style-type: none;
+}
+.footer_link_lists{
+    display: flex;
+    flex-direction: column;
+    gap: 1.75rem;
+}
+.footer_links{
+    color: #777;
+    font-size: 0.9rem;
+}
+.footer_copyright{
+    color: var(--gray);
+    font-size: 0.75rem;
+    padding-top: 1.2rem;
+    border-top: 1px solid #e5e7eb;
+}
+@media screen and (max-width:1080px) {
+    .footer_main{
+        display: flex;
+        flex-direction: column;
+    }
+    .footer_top{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 1.5rem;
+    }
+    .company_logo{
+        align-items: start;
+    }
+}
+@media screen and (max-width:848px) {
+    .footer_grid{
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
