--- a/styles.css
+++ b/styles.css
@@ -546,7 +546,7 @@ body{
     font-size: 1.2rem;
     font-weight: bold;
     color: var(--text-color);
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 ul{
     list-style-type: none;
@@ -554,7 +554,7 @@ ul{
 .footer_link_lists{
     display: flex;
     flex-direction: column;
-    gap: 1.75rem;
+    gap: 1rem;
 }
 .footer_links{
     color: #777;
@@ -563,21 +563,29 @@ ul{
 .footer_copyright{
     color: var(--gray);
     font-size: 0.75rem;
-    padding-top: 1.2rem;
+    margin-top: 0.8rem;
+    padding-top: 1rem;
     border-top: 1px solid #e5e7eb;
 }
 @media screen and (max-width:1080px) {
     .footer_main{
         display: flex;
         flex-direction: column;
+        padding: 0;
+        align-items: center;
     }
     .footer_top{
         display: flex;
         flex-direction: column;
         margin-bottom: 1.5rem;
+        width: 100%;
     }
     .company_logo{
-        align-items: start;
+        align-items: center;
+    }
+    .footer_container{
+        padding: 0;
+        margin: 0.8rem;
     }
 }
 @media screen and (max-width:848px) {
